--- a/deltarune/index.html
+++ b/deltarune/index.html
@@ -46,15 +46,15 @@
       <span class="disabled-title">--</span>
       <img src="icons/0.png">
     </a>
-    <a href="javascript:window.open('https://truffled.lol', '_blank')" class="row">
+    <a href="javascript:window.open('#', '_blank')" class="row">
       <span class="chapter"></span>
-      <span class="title">port by bog :o</span>
+      <span class="title">Note: Res might be broken on some laptops... | Port by bog</span>
       <span class="badge"></span>
     </a>
   </div>
   <audio id="drone" controls loop autoplay hidden>
     <source src="audios/AUDIO_DRONE.ogg" type="audio/ogg">
-    your slow ass browser doesnt support AUDIO?
+    * The school can't even afford good laptops.
   </audio>
   <button id="mute">🔊</button>
   <script>
