--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@ other skilled developers.</div>
       <div class="game-title">OMORI</div>
     </a>
 
-    <a class="game-box" href="https://www.google.com" data-name="game 3">
-      <img src="https://via.placeholder.com/400" alt="Game 3">
-      <div class="game-title">Game 3</div>
+    <a class="game-box" href="/games/undertaleyellow" data-name="game 3">
+      <img src="https://cdn2.steamgriddb.com/icon/3057aa0acb6d937295819f3d94f015e9.ico" alt="Game 3">
+      <div class="game-title">UNDERTALE Yellow</div>
     </a>
 
     <a class="game-box" href="https://www.google.com" data-name="game 4">
