--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ other skilled developers.</div>
       <div class="game-title">OMORI</div>
     </a>
 
-    <a class="game-box" href="/games/undertaleyellow" data-name="game 3">
+    <a class="game-box" href="/games/uty" data-name="game 3">
       <img src="https://cdn2.steamgriddb.com/icon/3057aa0acb6d937295819f3d94f015e9.ico" alt="Game 3">
       <div class="game-title">UNDERTALE Yellow</div>
     </a>
