--- a/index.html
+++ b/index.html
@@ -114,39 +114,39 @@ other skilled developers.</div>
       <div class="game-title">UNDERTALE Yellow</div>
     </a>
 
-    <a class="game-box" href="https://www.google.com" data-name="game 4">
-      <img src="https://via.placeholder.com/400" alt="Game 4">
-      <div class="game-title">Game 4</div>
+    <a class="game-box" href="/games" data-name="game 4">
+      <img src="https://m.media-amazon.com/images/I/41mjt9pvDoL._UXNaN_FMjpg_QL85_.jpg" alt="Game 4">
+      <div class="game-title">Bad Parenting</div>
     </a>
 
-    <a class="game-box" href="https://www.google.com" data-name="game 5">
-      <img src="https://via.placeholder.com/400" alt="Game 5">
-      <div class="game-title">Game 5</div>
+    <a class="game-box" href="/games/osu data-name="game 5">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/2/29/Osu%21_logo_2024.png" alt="Game 5">
+      <div class="game-title">osu!</div>
     </a>
 
-    <a class="game-box" href="https://www.google.com" data-name="game 6">
-      <img src="https://via.placeholder.com/400" alt="Game 6">
-      <div class="game-title">Game 6</div>
+    <a class="game-box" href="/games/abirds" data-name="game 6">
+      <img src="https://i.redd.it/zsqypesy6drf1.png" alt="Angry Birds>
+      <div class="game-title">Angry Birds</div>
     </a>
 
-    <a class="game-box" href="https://www.google.com" data-name="game 7">
-      <img src="https://via.placeholder.com/400" alt="Game 7">
-      <div class="game-title">Game 7</div>
+    <a class="game-box" href="/games/tomodachi" data-name="game 7">
+      <img src="https://upload.wikimedia.org/wikipedia/en/a/a4/Tomodachi_Collection.jpg" alt="Game 7">
+      <div class="game-title">Tomodachi Collection</div>
     </a>
 
-    <a class="game-box" href="https://www.google.com" data-name="game 8">
-      <img src="https://via.placeholder.com/400" alt="Game 8">
-      <div class="game-title">Game 8</div>
+    <a class="game-box" href="/games/superhot" data-name="game 8">
+      <img src="https://yt3.googleusercontent.com/ytc/AIdro_lUAU1wbH8KiPz-Q2ppjtFEn_sGvxBE2sySkHo1ELm4PQ=s900-c-k-c0x00ffffff-no-rj" alt="Game 8">
+      <div class="game-title">Superhot</div>
     </a>
 
-    <a class="game-box" href="https://www.google.com" data-name="game 9">
-      <img src="https://via.placeholder.com/400" alt="Game 9">
-      <div class="game-title">Game 9</div>
+    <a class="game-box" href="/games/subwaysurfers data-name="game 9">
+      <img src="https://img.poki-cdn.com/cdn-cgi/image/q=78,scq=50,width=314,height=314,fit=cover,f=auto/4da7a102035ecd7c1d56bd9036ccffbc/subway-surfers.png" alt="Game 9">
+      <div class="game-title">Subway Surfers</div>
     </a>
 
     <a class="game-box" href="https://www.google.com" data-name="game 10">
       <img src="https://via.placeholder.com/400" alt="Game 10">
-      <div class="game-title">Game 10</div>
+      <div class="game-title">Sprunki</div>
     </a>
 
     <a class="game-box" href="https://www.google.com" data-name="game 11">
