--- a/index.html
+++ b/index.html
@@ -114,18 +114,18 @@ other skilled developers.</div>
       <div class="game-title">UNDERTALE Yellow</div>
     </a>
 
-    <a class="game-box" href="/games" data-name="game 4">
+    <a class="game-box" href="/games/parenting" data-name="game 4">
       <img src="https://m.media-amazon.com/images/I/41mjt9pvDoL._UXNaN_FMjpg_QL85_.jpg" alt="Game 4">
       <div class="game-title">Bad Parenting</div>
     </a>
 
-    <a class="game-box" href="/games/osu data-name="game 5">
+    <a class="game-box" href="/games/osu" data-name="game 5">
       <img src="https://upload.wikimedia.org/wikipedia/commons/2/29/Osu%21_logo_2024.png" alt="Game 5">
       <div class="game-title">osu!</div>
     </a>
 
     <a class="game-box" href="/games/abirds" data-name="game 6">
-      <img src="https://i.redd.it/zsqypesy6drf1.png" alt="Angry Birds>
+      <img src="https://i.redd.it/zsqypesy6drf1.png" alt="Angry Birds">
       <div class="game-title">Angry Birds</div>
     </a>
 
