--- a/index.html
+++ b/index.html
@@ -93,9 +93,8 @@ html,body{height:100%;margin:0;background:var(--bg);color:var(--text);font-famil
 
 v.01 | Welcome to a4Games!
 Feel free to explore any of our games.
-Please note that basically all of these games
-were NOT ported by me, but ported by
-other skilled developers.</div>
+Please note that basically all of these games were NOT ported by me,
+but ported by other skilled developers.</div>
 
   <div class="grid" id="gameGrid">
 
@@ -139,7 +138,7 @@ other skilled developers.</div>
       <div class="game-title">Superhot</div>
     </a>
 
-    <a class="game-box" href="/games/subwaysurfers data-name="game 9">
+    <a class="game-box" href="/games/subwaysurfers" data-name="game 9">
       <img src="https://img.poki-cdn.com/cdn-cgi/image/q=78,scq=50,width=314,height=314,fit=cover,f=auto/4da7a102035ecd7c1d56bd9036ccffbc/subway-surfers.png" alt="Game 9">
       <div class="game-title">Subway Surfers</div>
     </a>
