--- a/index.html
+++ b/index.html
@@ -148,10 +148,96 @@ but ported by other skilled developers.</div>
       <div class="game-title">Sprunki</div>
     </a>
 
-    <a class="game-box" href="https://www.google.com" data-name="game 11">
-      <img src="https://via.placeholder.com/400" alt="Game 11">
-      <div class="game-title">Game 11</div>
-    </a>
+<a class="game-box" href="/games/Baldi.html" data-name="baldi">
+  <img src="https://via.placeholder.com/400" alt="Baldi">
+  <div class="game-title">Baldi</div>
+</a>
+
+<a class="game-box" href="/games/Bendy.html" data-name="bendy">
+  <img src="https://via.placeholder.com/400" alt="Bendy">
+  <div class="game-title">Bendy</div>
+</a>
+
+<a class="game-box" href="/games/BlockBlast.html" data-name="block blast">
+  <img src="https://via.placeholder.com/400" alt="Block Blast">
+  <div class="game-title">Block Blast</div>
+</a>
+
+<a class="game-box" href="/games/CookieClicker.html" data-name="cookie clicker">
+  <img src="https://via.placeholder.com/400" alt="Cookie Clicker">
+  <div class="game-title">Cookie Clicker</div>
+</a>
+
+<a class="game-box" href="/games/Cuphead.html" data-name="cuphead">
+  <img src="https://via.placeholder.com/400" alt="Cuphead">
+  <div class="game-title">Cuphead</div>
+</a>
+
+<a class="game-box" href="/games/FNF.html" data-name="fnf">
+  <img src="https://via.placeholder.com/400" alt="FNF">
+  <div class="game-title">FNF</div>
+</a>
+
+<a class="game-box" href="/games/FNaC.html" data-name="fnac">
+  <img src="https://via.placeholder.com/400" alt="FNaC">
+  <div class="game-title">FNaC</div>
+</a>
+
+<a class="game-box" href="/games/FNaC2.html" data-name="fnac2">
+  <img src="https://via.placeholder.com/400" alt="FNaC2">
+  <div class="game-title">FNaC 2</div>
+</a>
+
+<a class="game-box" href="/games/FNaF-PizzaSim.html" data-name="fnaf pizzasim">
+  <img src="https://via.placeholder.com/400" alt="FNaF PizzaSim">
+  <div class="game-title">FNaF PizzaSim</div>
+</a>
+
+<a class="game-box" href="/games/FNaF-SisterLocation.html" data-name="fnaf sister location">
+  <img src="https://via.placeholder.com/400" alt="FNaF Sister Location">
+  <div class="game-title">FNaF Sister Location</div>
+</a>
+
+<a class="game-box" href="/games/FNaF-UCN.html" data-name="fnaf ucn">
+  <img src="https://via.placeholder.com/400" alt="FNaF UCN">
+  <div class="game-title">FNaF UCN</div>
+</a>
+
+<a class="game-box" href="/games/FNaF-World.html" data-name="fnaf world">
+  <img src="https://via.placeholder.com/400" alt="FNaF World">
+  <div class="game-title">FNaF World</div>
+</a>
+
+<a class="game-box" href="/games/FNaF.html" data-name="fnaf">
+  <img src="https://via.placeholder.com/400" alt="FNaF">
+  <div class="game-title">FNaF</div>
+</a>
+
+<a class="game-box" href="/games/FNaF2.html" data-name="fnaf 2">
+  <img src="https://via.placeholder.com/400" alt="FNaF 2">
+  <div class="game-title">FNaF 2</div>
+</a>
+
+<a class="game-box" href="/games/FNaF3.html" data-name="fnaf 3">
+  <img src="https://via.placeholder.com/400" alt="FNaF 3">
+  <div class="game-title">FNaF 3</div>
+</a>
+
+<a class="game-box" href="/games/FNaF4.html" data-name="fnaf 4">
+  <img src="https://via.placeholder.com/400" alt="FNaF 4">
+  <div class="game-title">FNaF 4</div>
+</a>
+
+<a class="game-box" href="/games/FlappyBird.html" data-name="flappy bird">
+  <img src="https://via.placeholder.com/400" alt="Flappy Bird">
+  <div class="game-title">Flappy Bird</div>
+</a>
+
+<a class="game-box" href="/games/FruitNinja.html" data-name="fruit ninja">
+  <img src="https://via.placeholder.com/400" alt="Fruit Ninja">
+  <div class="game-title">Fruit Ninja</div>
+</a>
+
 
     <a class="game-box" href="https://www.google.com" data-name="game 12">
       <img src="https://via.placeholder.com/400" alt="Game 12">
