--- a/index.html
+++ b/index.html
@@ -128,17 +128,17 @@ but ported by other skilled developers.</div>
       <div class="game-title">Angry Birds</div>
     </a>
 
-    <a class="game-box" href="/games/tomodachi" data-name="game 7">
+    <a class="game-box" href="/games/TomodachiCol" data-name="game 7">
       <img src="https://upload.wikimedia.org/wikipedia/en/a/a4/Tomodachi_Collection.jpg" alt="Game 7">
       <div class="game-title">Tomodachi Collection</div>
     </a>
 
-    <a class="game-box" href="/games/superhot" data-name="game 8">
+    <a class="game-box" href="/games/Superhot" data-name="game 8">
       <img src="https://yt3.googleusercontent.com/ytc/AIdro_lUAU1wbH8KiPz-Q2ppjtFEn_sGvxBE2sySkHo1ELm4PQ=s900-c-k-c0x00ffffff-no-rj" alt="Game 8">
       <div class="game-title">Superhot</div>
     </a>
 
-    <a class="game-box" href="/games/subwaysurfers" data-name="game 9">
+    <a class="game-box" href="/games/SubwaySurfers" data-name="game 9">
       <img src="https://img.poki-cdn.com/cdn-cgi/image/q=78,scq=50,width=314,height=314,fit=cover,f=auto/4da7a102035ecd7c1d56bd9036ccffbc/subway-surfers.png" alt="Game 9">
       <div class="game-title">Subway Surfers</div>
     </a>
