--- a/index.html
+++ b/index.html
@@ -143,63 +143,58 @@ but ported by other skilled developers.</div>
       <div class="game-title">Subway Surfers</div>
     </a>
 
-    <a class="game-box" href="https://www.google.com" data-name="game 10">
-      <img src="https://via.placeholder.com/400" alt="Game 10">
-      <div class="game-title">Sprunki</div>
-    </a>
-
 <a class="game-box" href="/games/Baldi.html" data-name="baldi">
-  <img src="https://via.placeholder.com/400" alt="Baldi">
-  <div class="game-title">Baldi</div>
+  <img src="https://static.wikitide.net/baldisbasicswiki/2/29/Bald_Frown0000.png" alt="Baldi">
+  <div class="game-title">Baldi's Basics</div>
 </a>
 
 <a class="game-box" href="/games/Bendy.html" data-name="bendy">
-  <img src="https://via.placeholder.com/400" alt="Bendy">
-  <div class="game-title">Bendy</div>
+  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTwpm4sMajYn6apRUvS88AZh-3WHg0Ndgl7xw&s" alt="Bendy">
+  <div class="game-title">Bendy and the Ink Machine</div>
 </a>
 
 <a class="game-box" href="/games/BlockBlast.html" data-name="block blast">
-  <img src="https://via.placeholder.com/400" alt="Block Blast">
+  <img src="https://imgs.crazygames.com/block-puzzle-master_1x1/20250924025352/block-puzzle-master_1x1-cover?format=auto&quality=100&metadata=none&width=1200" alt="Block Blast">
   <div class="game-title">Block Blast</div>
 </a>
 
 <a class="game-box" href="/games/CookieClicker.html" data-name="cookie clicker">
-  <img src="https://via.placeholder.com/400" alt="Cookie Clicker">
+  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS8PLMDVpWpUSOORJ3TDg7_FJ9l9WnK_kROVlfQXqUwTW85h4Q6d9bbLwcJTwP8paHOiXk&usqp=CAU" alt="Cookie Clicker">
   <div class="game-title">Cookie Clicker</div>
 </a>
 
 <a class="game-box" href="/games/Cuphead.html" data-name="cuphead">
-  <img src="https://via.placeholder.com/400" alt="Cuphead">
+  <img src="https://imgix.bustle.com/inverse/f5/d9/0c/61/30d3/4717/b94e/d0bbe2e78503/cuphead-2017.png0" alt="Cuphead">
   <div class="game-title">Cuphead</div>
 </a>
 
 <a class="game-box" href="/games/FNF.html" data-name="fnf">
-  <img src="https://via.placeholder.com/400" alt="FNF">
-  <div class="game-title">FNF</div>
+  <img src="https://img.utdstc.com/icon/807/216/8072161110b1f6a2990a4baeb55eaaeab761fc199d9c001c7b6623f4cf8c6eb7:200" alt="FNF">
+  <div class="game-title">Friday Night Funkin'</div>
 </a>
 
 <a class="game-box" href="/games/FNaC.html" data-name="fnac">
-  <img src="https://via.placeholder.com/400" alt="FNaC">
-  <div class="game-title">FNaC</div>
+  <img src="https://cdn2.steamgriddb.com/icon/3b7fa12d7dcf324695af9af0f2523e2a.png" alt="FNaC">
+  <div class="game-title">Five Nights at Candy's</div>
 </a>
 
 <a class="game-box" href="/games/FNaC2.html" data-name="fnac2">
-  <img src="https://via.placeholder.com/400" alt="FNaC2">
-  <div class="game-title">FNaC 2</div>
+  <img src="https://cdn2.steamgriddb.com/icon/4ee285c12ef11f247df48292946aea6d.ico" alt="FNaC2">
+  <div class="game-title">Five Nights at Candy's 2</div>
 </a>
 
 <a class="game-box" href="/games/FNaF-PizzaSim.html" data-name="fnaf pizzasim">
-  <img src="https://via.placeholder.com/400" alt="FNaF PizzaSim">
+  <img src="https://play-lh.googleusercontent.com/zDcOTck_4ZjLeJNgil4bpIXUefRUYVqOqlpc8hxeDby8LQh0eZhYDho9U3W_RVg9yuE" alt="FNaF PizzaSim">
   <div class="game-title">FNaF PizzaSim</div>
 </a>
 
 <a class="game-box" href="/games/FNaF-SisterLocation.html" data-name="fnaf sister location">
-  <img src="https://via.placeholder.com/400" alt="FNaF Sister Location">
+  <img src="https://play-lh.googleusercontent.com/u9wx5aNNV6Yn4sJpi7uPBiElRnfAp1zUrn8Xqb4Dx_WBoOPHlB6G6gaYLI-mEXyABPnz" alt="FNaF Sister Location">
   <div class="game-title">FNaF Sister Location</div>
 </a>
 
 <a class="game-box" href="/games/FNaF-UCN.html" data-name="fnaf ucn">
-  <img src="https://via.placeholder.com/400" alt="FNaF UCN">
+  <img src="https://play-lh.googleusercontent.com/pB7dsLLcRgADtFpEPeKc5mSyAn1E1JzrdQ1V7-Y5hizgub3G8e9UJIc5opC9mYXKSBw" alt="FNaF UCN">
   <div class="game-title">FNaF UCN</div>
 </a>
 
@@ -209,32 +204,32 @@ but ported by other skilled developers.</div>
 </a>
 
 <a class="game-box" href="/games/FNaF.html" data-name="fnaf">
-  <img src="https://via.placeholder.com/400" alt="FNaF">
+  <img src="https://static.wikia.nocookie.net/freddy-fazbears-pizza/images/4/47/Fnaf-world-android.jpg/revision/latest/scale-to-width-down/256?cb=20240519225852" alt="FNaF">
   <div class="game-title">FNaF</div>
 </a>
 
 <a class="game-box" href="/games/FNaF2.html" data-name="fnaf 2">
-  <img src="https://via.placeholder.com/400" alt="FNaF 2">
+  <img src="https://play-lh.googleusercontent.com/GYcyLlHWoZumcal0WmDJJo2rCFyl3Y0mwXm0zaD-C9gC0PJGQMhzOKHfDUVlqSDlag=w240-h480-rw" alt="FNaF 2">
   <div class="game-title">FNaF 2</div>
 </a>
 
 <a class="game-box" href="/games/FNaF3.html" data-name="fnaf 3">
-  <img src="https://via.placeholder.com/400" alt="FNaF 3">
+  <img src="https://preview.redd.it/33usgd94xncz.png?auto=webp&s=7f3ee7134624ab76e11626c1cb750b8102f3b64a" alt="FNaF 3">
   <div class="game-title">FNaF 3</div>
 </a>
 
 <a class="game-box" href="/games/FNaF4.html" data-name="fnaf 4">
-  <img src="https://via.placeholder.com/400" alt="FNaF 4">
+  <img src="https://static.wikia.nocookie.net/fivenightsatfreddys/images/6/6c/Fnaf_4_desktop_icon.jpg/revision/latest/thumbnail/width/360/height/450?cb=20150724183458" alt="FNaF 4">
   <div class="game-title">FNaF 4</div>
 </a>
 
 <a class="game-box" href="/games/FlappyBird.html" data-name="flappy bird">
-  <img src="https://via.placeholder.com/400" alt="Flappy Bird">
+  <img src="https://upload.wikimedia.org/wikipedia/en/thumb/0/0a/Flappy_Bird_icon.png/250px-Flappy_Bird_icon.png0" alt="Flappy Bird">
   <div class="game-title">Flappy Bird</div>
 </a>
 
 <a class="game-box" href="/games/FruitNinja.html" data-name="fruit ninja">
-  <img src="https://via.placeholder.com/400" alt="Fruit Ninja">
+  <img src="https://cdn.jim-nielsen.com/ios/512/fruit-ninja-2020-08-31.png?rf=1024" alt="Fruit Ninja">
   <div class="game-title">Fruit Ninja</div>
 </a>
 
